@@ -1,5 +1,7 @@
 * The Gaffer.BlockedConnection constructor now accepts a list of connections to block, as an alternative to just a single connection.
 
+* Added a Gaffer.LeafPathFilter class, which filters out leaf Paths.
+
 0.28.1
 ------
 
